Add component for adding torrents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,10 @@
         <h3 matLine>Home</h3>
       </mat-list-item>
       <mat-list-item>
+        <mat-icon matListIcon>note_add</mat-icon>
+        <h3 matLine>Add Torrent</h3>
+      </mat-list-item>
+      <mat-list-item>
         <mat-icon matListIcon>settings</mat-icon>
         <h3 matLine>Config</h3>
       </mat-list-item>
