--- a/src/app/core/ui/components/home-statusbar/home-statusbar.component.scss
+++ b/src/app/core/ui/components/home-statusbar/home-statusbar.component.scss
@@ -7,7 +7,7 @@
 .divider {
   height: 80%;
   margin: 0 1rem;
-  border: 1px solid #424242;
+  border-left: 1px solid #424242;
 }
 
 .alternate-speed,
