--- a/src/app/core/ui/components/torrent-list/torrent-list.component.scss
+++ b/src/app/core/ui/components/torrent-list/torrent-list.component.scss
@@ -4,13 +4,13 @@ th, td {
 
 th + th {
   div {
-    padding-left: 0.5rem;
+    margin-left: 1rem;
   }
 }
 
 td + td {
   div {
-    padding-left: 0.5rem;
+    margin-left: 1rem;
   }
 }
 
