--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,7 +21,9 @@
   </app-home-statusbar>
 
   <!-- add-torrent-->
-  <button mat-fab color="accent" class="add-torrent-button" (click)="addTorrent()">
-    <mat-icon>add</mat-icon>
-  </button>
+<!--  <button mat-fab color="accent" class="add-torrent-button" (click)="addTorrent()">-->
+<!--    <mat-icon>add</mat-icon>-->
+<!--  </button>-->
+
+  <app-add-speed-dial></app-add-speed-dial>
 </div>
