--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,20 +3,16 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav mode="over">
     <mat-nav-list>
-      <mat-list-item>
+      <mat-list-item (click)="navigate('home')">
         <mat-icon matListIcon>home</mat-icon>
         <h3 matLine>Home</h3>
       </mat-list-item>
-      <mat-list-item>
-        <mat-icon matListIcon>note_add</mat-icon>
-        <h3 matLine>Add Torrent</h3>
-      </mat-list-item>
-      <mat-list-item>
+      <mat-list-item (click)="navigate('settings')">
         <mat-icon matListIcon>settings</mat-icon>
         <h3 matLine>Config</h3>
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item>
+      <mat-list-item (click)="logout()">
         <mat-icon matListIcon>power_settings_new</mat-icon>
         <h3 matLine>Logoff</h3>
       </mat-list-item>
