--- a/src/app/core/ui/components/torrent-details/torrent-details.component.html
+++ b/src/app/core/ui/components/torrent-details/torrent-details.component.html
@@ -5,9 +5,22 @@
         <app-general-details [torrentHash]="torrentHash"></app-general-details>
       </ng-scrollbar>
     </mat-tab>
-    <mat-tab [label]="'TORRENT_DETAILS.trackersTab' | translate">Trackers</mat-tab>
-    <mat-tab [label]="'TORRENT_DETAILS.peersTab' | translate">Peers</mat-tab>
-    <mat-tab [label]="'TORRENT_DETAILS.sourcesTab' | translate">HTTP Sources</mat-tab>
-    <mat-tab [label]="'TORRENT_DETAILS.contentTab' | translate">Content</mat-tab>
+    <mat-tab [label]="'TORRENT_DETAILS.trackersTab' | translate">
+      <ng-scrollbar visibility="hover" class="scrollbar">
+        <app-tracker-details [torrentHash]="torrentHash"></app-tracker-details>
+      </ng-scrollbar>
+    </mat-tab>
+    <mat-tab [label]="'TORRENT_DETAILS.peersTab' | translate">
+      <ng-scrollbar visibility="hover" class="scrollbar">
+      </ng-scrollbar>
+    </mat-tab>
+    <mat-tab [label]="'TORRENT_DETAILS.sourcesTab' | translate">
+      <ng-scrollbar visibility="hover" class="scrollbar">
+      </ng-scrollbar>
+    </mat-tab>
+    <mat-tab [label]="'TORRENT_DETAILS.contentTab' | translate">
+      <ng-scrollbar visibility="hover" class="scrollbar">
+      </ng-scrollbar>
+    </mat-tab>
   </mat-tab-group>
 </div>
